optimize testing error computation in SubGradient.java